src/objects/AsyncRequest__c.object
<CustomObject>
    <description>This object is for recording Asynchronous calls, which can use with batch to serialise process.</description>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Error Recovery</description>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Params__c</fullName>
        <description>Define the parameters need to run the Async Request</description>
        <label>Params</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Define the type of Async Job</description>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AsyncRequest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Type__c</columns>
        <columns>Failed__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>Params__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASYNREQ{YYYY}-{MM}-{DD}--{0}</displayFormat>
        <label>AsyncRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AsyncRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>